[project]
name = "ppo-reproduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "ipykernel>=7.1.0",
    "nvitop>=1.6.0",
    "peft>=0.18.0",
    "tensorboard>=2.20.0",
    "transformers>=4.57.1",
    "trl",
]
